# ae-assessment-2

./: conclusion.md
ae-assessment/: gitignore  pyproject.toml  setup.md
ae-assessment/models/marts/: dim_client.sql  dim_client.yml  dim_date.sql  dim_date.yml  fct_currency_rate.sql  fct_currency_rate.yml  fct_transaction.sql  fct_transaction.yml  mart_monthly_revenue.sql
ae-assessment/models/staging/: stg_client_contracts.sql  stg_client_contracts.yml  stg_currency_rates.sql  stg_currency_rates.yml  stg_transaction_resolutions.sql  stg_transaction_resolutions.yml  stg_transactions.sql  stg_transactions.yml
